--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,12 @@ repository: test-site2/vladimir-nikitin.github.io
 #theme: jekyll-theme-minimal
 #remote_theme: pages-themes/minimal@v0.2.0
 
-theme: just-the-docs
+#theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs@v0.3.3
 
 plugins:
   - jekyll-feed
-#  - jekyll-remote-theme
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
